[package]
name = "rust-story-skill"
version = "0.1.0"
authors = ["Ryan Larkin <rlarkin212@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
listenfd = "0.3.3"
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"